fix(gtk-colors): Align colors with branding and use colors file
This helps ensure that the colors are set in a single-source, and then exported elsewhere
for use.

--- a/gtk/src/light/gtk-3.20/_pop_os-colors.scss
+++ b/gtk/src/light/gtk-3.20/_pop_os-colors.scss
@@ -5,10 +5,9 @@ $highlights_orange: if($variant=='light', #FBB86C, #FFAD00);
 $text_orange: if($variant=='light', #AF5C02, #FFD7A1);
 
 // blue
-$blue: if($variant=='light', #63B1BC, #6ACAD8);
-$highlights_blue: if($variant=='light', #6ACAD8, #63B1BC);
-//$text_blue: if($variant=='light', #00496D, #94EBEB);
-$text_blue: if($variant=='light', #00496D, #6ACAD8);
+$blue: if($variant=='light', #48B9C7, #94EBEB);
+$highlights_blue: if($variant=='light', #94EBEB, #48B9C7);
+$text_blue: if($variant=='light', #00496D, #94EBEB);
 
 // green
 $green: if($variant=='light', #82BF8C, #90CFB0);
@@ -21,8 +20,8 @@ $highlights_red: if($variant=='light', #EA9090, #E56A54);
 $text_red: if($variant=='light', #A0252B, #FFB5B5);
 
 // yellow
-$yellow: if($variant=='light', #FEDB40, #F9D87A);
-$highlights_yellow: if($variant=='light', #FFF19E, #FEDB40);
+$yellow: if($variant=='light', #FEDB40, #F7E062);
+$highlights_yellow: if($variant=='light', #F7E062, #FEDB40);
 $text_yellow: if($variant=='light', #966800, #FFF19E);
 
 // purple
@@ -62,18 +61,18 @@ $dark_neutral_grey_700: #222;
 $dark_neutral_grey_900: #111;
 
 // Light UI
-$light_ui_100: #FCFCFC;
+$light_ui_100: #FFF;
 $light_ui_300: #F6F6F6;
 $light_ui_500: #EDEDED;
 $light_ui_700: #E6E6E6;
-$light_ui_900: #DEDEDE;
+$light_ui_900: #CCC;
 
 // Dark UI
 $dark_ui_100: #474341;
-$dark_ui_300: #403C3A;
-$dark_ui_500: #393634;
-$dark_ui_700: #33302F;
-$dark_ui_900: #2B2928;
+$dark_ui_300: #363636;
+$dark_ui_500: #303030;
+$dark_ui_700: #292929;
+$dark_ui_900: #272727;
 
 $white: #FFF;
 $black: #000;
